(library
 (name lib_core_network)
 (libraries
  ;; bos
  cstruct
  ;; dns
  fpath
  ipaddr
  ;; logs
  ;; logs.lwt
  lwt
  lwt.unix
  ;; mirage-conduit
  ;; mirage-http
  mirage-logs
  mirage-net-psock
  ;; mirage-unix
  mirage-vnetif
  ;; nocrypto.lwt
  ;; opium_kernel
  ;; tcpip.arpv4
  ;; tcpip.ethif
  ;; tcpip.icmpv4
  tcpip.ipv4
  ;; tcpip.stack-direct
  ;; tcpip.tcp
  ;; tcpip.udp
  ;; tls.lwt
  ))
