(library
 (name lib_core_network)
 (libraries
  ;; bos
  ;; dns
  ;; logs
  ;; logs.lwt
  ;; mirage-conduit
  ;; nocrypto.lwt
  ;; tcpip.arpv4
  ;; tcpip.udp
  ;; tls.lwt
  base64
  bos
  cohttp
  cohttp-lwt-unix
  cohttp-mirage
  cstruct
  fpath
  ipaddr
  lwt
  lwt.unix
  mirage-clock-unix
  mirage-logs
  mirage-net-psock
  mirage-protocols-lwt
  mirage-unix
  mirage-vnetif
  opium_kernel
  re
  tcpip
  tcpip.icmpv4
  tcpip.ipv4
  tcpip.tcp
  ))
